refactor: remove unused imports